event-opcode/tests/ui/fail_only_suffix.rs
use event_opcode::EventOpCode;
#[derive(EventOpCode)]
pub struct Req;
fn main() {}
